[gd_scene load_steps=16 format=3 uid="uid://ivhvrwknk6pj"]

[ext_resource type="Script" uid="uid://d0m6xeaqvbs2h" path="res://scenes/WholeEpilogue.gd" id="1_gm8gx"]
[ext_resource type="VideoStream" uid="uid://ckdr2f53ymhfh" path="res://assets/videos/GameClipForShoyaProject.ogv" id="2_5q7t8"]
[ext_resource type="Script" uid="uid://cw5of4dom8s2g" path="res://scenes/TransitionEpilogue.gd" id="2_ut27c"]
[ext_resource type="Texture2D" uid="uid://ccotpigqjog4t" path="res://assets/EpilogueAssets/ShoyaLosingItEpilogue.png" id="3_bms33"]
[ext_resource type="Texture2D" uid="uid://bwc84v3bx0nno" path="res://assets/EpilogueAssets/OwGameplayEpilogue.png" id="4_gm8gx"]
[ext_resource type="Texture2D" uid="uid://m5fem3ashruf" path="res://assets/EpilogueAssets/ShoyaBeforeThrowEpilogue.png" id="5_ut27c"]
[ext_resource type="Texture2D" uid="uid://dsj2757hvicsy" path="res://assets/EpilogueAssets/ShoyaIsGonnaThrowEpilogue.png" id="6_tey74"]
[ext_resource type="Texture2D" uid="uid://cg7gnoel3lxpb" path="res://assets/EpilogueAssets/ShoyaBeforeWindowEpilogue.png" id="7_06x1n"]
[ext_resource type="Texture2D" uid="uid://de2oammqcmc8x" path="res://assets/EpilogueAssets/ShoyaAfterWindowWtfShoyaThatsExpensiveEpilogue.png" id="8_l2hyo"]
[ext_resource type="AudioStream" uid="uid://dgra2tcoa8cr5" path="res://assets/Sounds/KeyboardTapping.wav" id="9_gm8gx"]
[ext_resource type="AudioStream" uid="uid://cy1w7u20fafp2" path="res://assets/Sounds/WindowBreak.wav" id="11_tey74"]

[sub_resource type="Animation" id="Animation_d3eho"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_5d5v2"]
resource_name = "backtonormal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ytedg"]
resource_name = "fade_to_black"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5d5v2"]
_data = {
&"RESET": SubResource("Animation_d3eho"),
&"backtonormal": SubResource("Animation_5d5v2"),
&"fade_to_black": SubResource("Animation_ytedg")
}

[node name="EpilogueScene" type="Node2D"]
script = ExtResource("1_gm8gx")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("2_ut27c")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
&"": SubResource("AnimationLibrary_5d5v2")
}
speed_scale = 1.5

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(558, 345)
zoom = Vector2(1.92, 1.085)
limit_enabled = false

[node name="Part1" type="Sprite2D" parent="."]
position = Vector2(559, 346)
scale = Vector2(3, 3)
texture = ExtResource("3_bms33")

[node name="Part2" type="Sprite2D" parent="."]
visible = false
position = Vector2(559, 346)
scale = Vector2(3, 3)
texture = ExtResource("4_gm8gx")

[node name="Part3" type="Sprite2D" parent="."]
visible = false
position = Vector2(559, 346)
scale = Vector2(3, 3)
texture = ExtResource("5_ut27c")

[node name="Part4" type="Sprite2D" parent="."]
visible = false
position = Vector2(559, 346)
scale = Vector2(3, 3)
texture = ExtResource("6_tey74")

[node name="Part5" type="Sprite2D" parent="."]
visible = false
position = Vector2(559, 346)
scale = Vector2(3, 3)
texture = ExtResource("7_06x1n")

[node name="Part6" type="Sprite2D" parent="."]
visible = false
position = Vector2(559, 346)
scale = Vector2(3, 3)
texture = ExtResource("8_l2hyo")

[node name="OwGameplay" type="VideoStreamPlayer" parent="."]
offset_left = 340.0
offset_top = 131.0
offset_right = 947.0
offset_bottom = 576.0
scale = Vector2(0.7041582, 0.55156106)
stream = ExtResource("2_5q7t8")
speed_scale = 1.5
expand = true

[node name="Keyboard" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_gm8gx")
pitch_scale = 2.0

[node name="WindowBreak" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_tey74")

[connection signal="ChangeCanvas" from="." to="CanvasLayer" method="_on_epilogue_scene_change_canvas"]
[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="ready" from="CanvasLayer" to="CanvasLayer" method="_on_ready"]
